coffeeshop/09_cic_vpx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cic-vpx
  namespace: tier-2-adc
  labels:
    app: cic-vpx
spec:
      serviceAccountName: cpx
      containers:
      - name: cic-vpx
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.10.2.1"
        args:
          - --ingress-classes
            vpx-coffeeshop
          - --feature-node-watch
            true
        imagePullPolicy: IfNotPresent
