coffeeshop/03_cpx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress-hotdrinks
  namespace: tier-2-adc
spec:
  selector:
    matchLabels:
      app: cpx-ingress-hotdrinks
  replicas: 1
  template:
    metadata:
      name: cpx-ingress-hotdrinks
      labels:
        app: cpx-ingress-hotdrinks
        app1: exporter
      annotations:
        NETSCALER_AS_APP: "True"
    spec:
      serviceAccountName: cpx
      containers:
        - name: cpx-ingress-hotdrinks
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:13.0-67.39"
          securityContext: 
             privileged: true
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: nitro-http
              containerPort: 9080
            - name: nitro-https
              containerPort: 9443
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /cpx/conf/
              name: cpx-volume1
            - mountPath: /cpx/crash/
              name: cpx-volume2
            - mountPath: /var/deviceinfo
              name: shared-data
        # Add cic as a sidecar
        - name: cic
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.10.2"
          args:
            - --ingress-classes
              hotdrink
            - --default-ssl-certificate
              team-hotdrink/hotdrink-secret
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data
        # add exporter as sidecar
        - name: exporter
          image: "quay.io/citrix/citrix-adc-metrics-exporter:1.4.6"
          args:
            - "--target-nsip=127.0.0.1"
            - "--port=8888"
            - "--secure=no"
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data
          securityContext:
            readOnlyRootFilesystem: true
          imagePullPolicy: IfNotPresent

      volumes:
      - name: cpx-volume1
        emptyDir: {}
      - name: cpx-volume2
        emptyDir: {}
      - name: shared-data
        emptyDir: {}


---

apiVersion: v1
kind: Service
metadata:
  name: lb-service-hotdrinks
  namespace: tier-2-adc
  labels:
    app: lb-service-hotdrinks
spec:
  clusterIP: None
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 80
  - port: 443
    protocol: TCP
    name: https
    targetPort: 443
  selector:
    app: cpx-ingress-hotdrinks

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress-colddrinks
  namespace: tier-2-adc
spec:
  selector:
    matchLabels:
      app: cpx-ingress-colddrinks
  replicas: 1
  template:
    metadata:
      name: cpx-ingress-colddrinks
      labels:
        app: cpx-ingress-colddrinks
        app1: exporter
      annotations:
        NETSCALER_AS_APP: "True"
    spec:
      serviceAccountName: cpx
      containers:
        - name: cpx-ingress-colddrinks
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:13.0-67.39"
          securityContext: 
             privileged: true
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: nitro-http
              containerPort: 9080
            - name: nitro-https
              containerPort: 9443
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /cpx/conf/
              name: cpx-volume1
            - mountPath: /cpx/crash/
              name: cpx-volume2
            - mountPath: /var/deviceinfo
              name: shared-data

        # Add cic as a sidecar
        - name: cic
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.10.2"
          args:
            - --ingress-classes
              colddrink
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data
          securityContext:
            readOnlyRootFilesystem: true
          imagePullPolicy: IfNotPresent
        # add exporter as sidecar
        - name: exporter
          image: "quay.io/citrix/citrix-adc-metrics-exporter:1.4.6"
          args:
            - "--target-nsip=127.0.0.1"
            - "--port=8888"
            - "--secure=no"
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data
          securityContext:
            readOnlyRootFilesystem: true
          imagePullPolicy: IfNotPresent

      volumes:
      - name: cpx-volume1
        emptyDir: {}
      - name: cpx-volume2
        emptyDir: {}
      - name: shared-data
        emptyDir: {}


---

apiVersion: v1
kind: Service
metadata:
  name: lb-service-colddrinks
  namespace: tier-2-adc
  labels:
    app: lb-service-colddrinks
spec:
  clusterIP: None
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 80
  - port: 443
    protocol: TCP
    name: https
    targetPort: 443
  selector:
    app: cpx-ingress-colddrinks

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress-guestbook
  namespace: tier-2-adc
spec:
  selector:
    matchLabels:
      app: cpx-ingress-guestbook
  replicas: 1
  template:
    metadata:
      name: cpx-ingress-guestbook
      labels:
        app: cpx-ingress-guestbook
        app1: exporter
      annotations:
        NETSCALER_AS_APP: "True"
    spec:
      serviceAccountName: cpx
      containers:
        - name: cpx-ingress-guestbook
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:13.0-67.39"
          securityContext: 
             privileged: true
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: nitro-http
              containerPort: 9080
            - name: nitro-https
              containerPort: 9443
          volumeMounts:
            - mountPath: /cpx/conf/
              name: cpx-volume1
            - mountPath: /cpx/crash/
              name: cpx-volume2
            - mountPath: /var/deviceinfo
              name: shared-data

        # Add cic as a sidecar
        - name: cic
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.10.2"
          args:
            - --ingress-classes
              guestbook
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data
          securityContext:
            readOnlyRootFilesystem: true
          imagePullPolicy: IfNotPresent

        # add exporter as sidecar
        - name: exporter
          image: "quay.io/citrix/citrix-adc-metrics-exporter:1.4.6"
          args:
            - "--target-nsip=127.0.0.1"
            - "--port=8888"
            - "--secure=no"
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data
          securityContext:
            readOnlyRootFilesystem: true
          imagePullPolicy: IfNotPresent


      volumes:
      - name: cpx-volume1
        emptyDir: {}
      - name: cpx-volume2
        emptyDir: {}
      - name: shared-data
        emptyDir: {}


---

apiVersion: v1
kind: Service
metadata:
  name: lb-service-guestbook
  namespace: tier-2-adc
  labels:
    app: lb-service-guestbook
spec:
  clusterIP: None
  ports:
  - port: 80
    protocol: TCP
    name: frontend
    targetPort: 80
  - port: 6379
    protocol: TCP
    name: guestbook
    targetPort: 6379
  selector:
    app: cpx-ingress-guestbook

---

# necessary to discover CPX metrics exporter 
# automatically

apiVersion: v1
kind: Service
metadata:
  name: exporter-cpx-ingress-hotdrinks
  namespace: tier-2-adc
  labels:
    app: exporter-cpx-ingress-hotdrinks
    service-type: citrix-adc-monitor
spec:
  selector:
    app: cpx-ingress-hotdrinks
  ports:
    - name: exporter-port
      port: 8888
      targetPort: 8888

---

apiVersion: v1
kind: Service
metadata:
  name: exporter-cpx-ingress-colddrinks
  namespace: tier-2-adc
  labels:
    app: exporter-cpx-ingress-colddrinks
    service-type: citrix-adc-monitor
spec:
  selector:
    app: cpx-ingress-colddrinks
  ports:
    - name: exporter-port
      port: 8888
      targetPort: 8888

---

apiVersion: v1
kind: Service
metadata:
  name: exporter-cpx-ingress-guestbook
  namespace: tier-2-adc
  labels:
    app: exporter-cpx-ingress-guestbook
    service-type: citrix-adc-monitor
spec:
  selector:
    app: cpx-ingress-guestbook
  ports:
    - name: exporter-port
      port: 8888
      targetPort: 8888
