coffeeshop/04_team_hotdrink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea-beverage
  namespace: team-hotdrink
  labels:
      name: tea-beverage
spec:
  selector:
    matchLabels:
      name: tea-beverage
  replicas: 2
  template:
    metadata:
      labels:
        name: tea-beverage
    spec:
      containers:
      - name: tea-beverage
        image: quay.io/sample-apps/hotdrinks:v1
        ports:
        - name: tea-80
          containerPort: 80
        - name: tea-443
          containerPort: 443
#        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tea-beverage
  namespace: team-hotdrink
spec:
  clusterIP: None
  ports:
  - name: tea-80
    port: 80
    targetPort: 80
  - name: tea-443
    port: 443
    targetPort: 443
  selector:
    name: tea-beverage

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-beverage 
  namespace: team-hotdrink
  labels:
      name: coffee-beverage
spec:
  selector:
    matchLabels:
      name: coffee-beverage
  replicas: 2 
  template:
    metadata:
      labels:
        name: coffee-beverage
    spec:
      containers:
      - name: coffee-beverage
        image: quay.io/sample-apps/hotdrinks:v1
        ports:
        - name: coffee-80
          containerPort: 80
        - name: coffee-443
          containerPort: 443 
#        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-beverage
  namespace: team-hotdrink
spec:
  clusterIP: None
  ports:
  - name: coffee-80
    port: 80
    targetPort: 80
  - name: coffee-443
    port: 443
    targetPort: 443
  selector:
    name: coffee-beverage

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-hotdrinks
  namespace: team-hotdrink
  labels:
      name: frontend-hotdrinks
spec:
  selector:
    matchLabels:
      name: frontend-hotdrinks
  replicas: 2
  template:
    metadata:
      labels:
        name: frontend-hotdrinks
    spec:
      containers:
      - name: frontend-hotdrinks
        image: quay.io/sample-apps/hotdrinks:v1
        ports:
        - name: hotdrinks-80
          containerPort: 80
        - name: hotdrinks-443
          containerPort: 443
#        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-hotdrinks
  namespace: team-hotdrink
spec:
  clusterIP: None
  ports:
  - name: hotdrinks-80
    port: 80
    targetPort: 80
  - name: hotdrinks-443
    port: 443
    targetPort: 443
  selector:
    name: frontend-hotdrinks

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotdrinks-ingress
  namespace: team-hotdrink
  annotations:
   kubernetes.io/ingress.class: "hotdrink"
   ingress.citrix.com/secure_backend: '{"coffee-beverage": "True"}'
#   ingress.citrix.com/insecure-termination: "allow"
   ingress.citrix.com/lbvserver: '{"frontend-hotdrinks":{"lbmethod":"ROUNDROBIN"},"tea-beverage":{"lbmethod":"LEASTRESPONSETIME"},"coffee-beverage":{"persistencetype":"SOURCEIP"}}'
spec:
  tls:
  - hosts:
  rules:
  - host: hotdrink.beverages.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-hotdrinks
            port: 
              number: 80
  - host:  tea
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
           service:
            name: tea-beverage
            port: 
              number: 80
  - host:  coffee
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coffee-beverage
            port: 
              number: 443

---

kind: Service
apiVersion: v1
metadata:
  name: coffee
  namespace: team-hotdrink
spec:
  type: ExternalName
  externalName: lb-service-hotdrinks.tier-2-adc.svc.cluster.local
  ports:
  - name: http
    port: 80
  - name: ssl
    port: 443

---

kind: Service
apiVersion: v1
metadata:
  name: tea
  namespace: team-hotdrink
spec:
  type: ExternalName
  externalName: lb-service-hotdrinks.tier-2-adc.svc.cluster.local
  ports:
  - name: http
    port: 80
  - name: ssl
    port: 443
