coffeeshop/06_team_colddrink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-colddrinks
  namespace: team-colddrink
  labels:
      name: frontend-colddrinks
spec:
  replicas: 2
  selector:
    matchLabels:
      name: frontend-colddrinks
  template:
    metadata:
      labels:
        name: frontend-colddrinks
    spec:
      containers:
      - name: frontend-colddrinks
        image: "quay.io/sample-apps/colddrinks:v1"
        ports:
        - name: colddrinks-80
          containerPort: 80
        - name: colddrinks-443
          containerPort: 443
#        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-colddrinks
  namespace: team-colddrink
spec:
  clusterIP: None
  ports:
  - name: colddrinks-80
    port: 80
    targetPort: 80
  - name: colddrinks-443
    port: 443
    targetPort: 443
  selector:
    name: frontend-colddrinks

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colddrinks-ingress
  namespace: team-colddrink
  annotations:
   kubernetes.io/ingress.class: "colddrink"
   ingress.citrix.com/secure-service-type: "ssl_tcp"
   ingress.citrix.com/secure_backend: '{"frontend-colddrinks": "True"}'
spec:
  tls:
  - secretName: colddrink-secret
  defaultBackend:
    service:
      name: frontend-colddrinks
      port: 
        number: 443
