coffeeshop/10_ingress_vpx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vpx
  namespace: tier-2-adc
  annotations:
   kubernetes.io/ingress.class: "vpx-coffeeshop"
   ingress.citrix.com/insecure-termination: "redirect"
   ingress.citrix.com/frontend-ip: "x.x.x.x"
   ingress.citrix.com/secure_backend: '{"lb-service-hotdrinks": "True","lb-service-colddrinks": "True"}'
spec:
  tls:
  - secretName: hotdrink-secret
  rules:
  - host:  hotdrink.beverages.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lb-service-hotdrinks
            port:
              number: 443
  - host:  guestbook.beverages.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lb-service-guestbook
            port:
              number: 80
  - host:  colddrink.beverages.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: lb-service-colddrinks
           port:
             number: 443
